--- a/public/wetech/index.html
+++ b/public/wetech/index.html
@@ -53,7 +53,7 @@
   <div id="header" class="customPadding" style="justify-content: center;">
     <!-- <div style="display:flex"> -->
       <img style="height:40px; width:150px; justify-content: center;" src="../images/logo-light.png">
-      <img style="height:24px; width:24px; justify-content: center;" src="./images/x.png">
+      <img style="height:24px; width:24px; justify-content: center;" src="../images/x.png">
       <img style="height: 43.3px; width:122px; justify-content: center;" src="./images/logo-wetech.png">
       <h1 id="caption-header" class="caption-header" style="font-size: 24px; justify-content: center;">Event Live Captioning</h1>
     <!-- </div> -->
