--- a/public/samir123/index.html
+++ b/public/samir123/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Windsor Alliance- Event Live Captioning, powered by BeAware</title>
+  <title>samir123 Alliance- Event Live Captioning, powered by BeAware</title>
   <meta name="description" content="WeTech Event Live Captioning, powered by BeAware">    
   <meta charset="utf-8">
   <meta name="author" content="Saamer Mansoor">
@@ -53,9 +53,9 @@
   <div id="header" class="customPadding" style="justify-content: center;">
     <!-- <div style="display:flex"> -->
       <img style="height:40px; width:150px; justify-content: center;" src="../images/logo-light.png">
-      <img style="height:24px; width:24px; justify-content: center;" src="../images/x.png">
-      <img style="height: 43.3px; width:122px; justify-content: center;" src=https://images.unsplash.com/photo-1691776667966-eb22e1b186d3?auto=format&fit=crop&q=80&w=2787&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D>
-      <h1 id="caption-header" class="caption-header" style="font-size: 24px; justify-content: center;">Event Live Captioning for Windsor</h1>
+      <img style="height:24px; width:24px; justify-content: center;" src="./images/x.png">
+      <img style="height: 43.3px; width:122px; justify-content: center;" src="./images/logo-wetech.png">
+      <h1 id="caption-header" class="caption-header" style="font-size: 24px; justify-content: center;">Event Live Captioning for samir123</h1>
     <!-- </div> -->
   </div>
   <div class="holder">
