--- a/public/priyanshu/index.html
+++ b/public/priyanshu/index.html
@@ -42,17 +42,18 @@
   <!-- Favicons -->
   <link rel="shortcut icon" href="../images/favicon.png">
   
+  <base href="/user/">
 
 
 
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css'>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../priyanshu/style.css">
 </head>
 <body style="width: 100%; margin: 0px">
   <!-- partial:index.partial.html -->
   <div id="header" class="customPadding" style="justify-content: center;">
     <!-- <div style="display:flex"> -->
-      <img style="height:40px; width:150px; justify-content: center;" src="../images/logo-footer.png">
+      <img style="height:40px; width:150px; justify-content: center;" src="../images/logo-light.png">
       <img style="height:24px; width:24px; justify-content: center;" src="../images/x.png">
       <img style="height: 43.3px; width:122px; justify-content: center;" src=https://images.unsplash.com/photo-1698444214003-dfdea976064a?dpr=2&h=280&w=280&auto=format&fit=crop&q=60&ixid=M3wxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjk5MzUwMTQ1fA&ixlib=rb-4.0.3>
       <h1 id="caption-header" class="caption-header" style="font-size: 24px; justify-content: center;">Event Live Captioning for priyanshu</h1>
