--- a/public/ont/index.html
+++ b/public/ont/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WIND Alliance- Event Live Captioning, powered by BeAware</title>
-  <meta name="description" content="WeTech Event Live Captioning, powered by BeAware">    
+  <title>ont Alliance- Event Live Captioning, powered by BeAware</title>
+  <meta name="description" content="ont Event Live Captioning, powered by BeAware">    
   <meta charset="utf-8">
   <meta name="author" content="Saamer Mansoor">
   <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <meta name="keywords" content="Deaf, HoH, HardofHearing, Hard, Hearing, Assistant, Android, iPhone, iOS, App, Website" />
-  <link rel="canonical" href="https://www.conferencecaptioning.com/wetech">  
+  <link rel="canonical" href="https://www.conferencecaptioning.com/
+  ">  
   <meta property="og:site_name" content="WeTech Event Live-Captioning by BeAware">
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -46,16 +47,17 @@
 
 
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css'>
-  <link rel="stylesheet" href="./style.css">
+  
+  <link rel="stylesheet" href="../ont/style.css">
 </head>
 <body style="width: 100%; margin: 0px">
   <!-- partial:index.partial.html -->
   <div id="header" class="customPadding" style="justify-content: center;">
     <!-- <div style="display:flex"> -->
-      <img style="height:40px; width:150px; justify-content: center;" src="../images/logo-footer.png">
-      <img style="height:24px; width:24px; justify-content: center;" src="../images/x.png">
-      <img style="height: 43.3px; width:122px; justify-content: center;" src=https://images.unsplash.com/photo-1613310023042-ad79320c00ff?auto=format&fit=crop&q=60&w=900&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bW91bmF0aW5zfGVufDB8fDB8fHww>
-      <h1 id="caption-header" class="caption-header" style="font-size: 24px; justify-content: center;">Event Live Captioning for WIND</h1>
+    <img style="height:40px; width:150px; justify-content: center;" src="../images/logo-light.png">
+    <img style="height:24px; width:24px; justify-content: center;" src="../images/x.png">
+      <img style="height: 43.3px; width:122px; justify-content: center;" src=https://images.unsplash.com/photo-1699475554452-f24c6a035a41?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHx8>
+      <h1 id="caption-header" class="caption-header" style="font-size: 24px; justify-content: center;">Event Live Captioning for ont</h1>
     <!-- </div> -->
   </div>
   <div class="holder">
@@ -78,7 +80,7 @@
   <span id="hotmail" style="justify-content: center; padding:0px; font-size: 18px; color:#000000; text-decoration: none;">
     PS: I love you. Get your free live-event transcription at
   </span>
-  <a href="https://conferencecaptioning.com/?src=wetech" style="justify-content: center; padding:0px; font-size: 18px; text-decoration:underline;color:#0000ff;">
+  <a href="https://conferencecaptioning.com/?src=ont" style="justify-content: center; padding:0px; font-size: 18px; text-decoration:underline;color:#0000ff;">
     ConferenceCaptioning
   </a>
   </div>
